<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校立方</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
      <string name="loginTitle">请输入账号和密码</string>
    <string name="loginHintName">请输入手机账号</string>
    <string name="loginHintPwd">请输入密码</string>
    <string name="loginFindPwd">忘记密码？</string>
    <string name="loginTipAutoLogin">自动登录</string>
    <string name="loginNewName">注册新账号</string>
    <string name="regTitle">请使用手机号码完成注册</string>
    <string name="regIngTitle">我们已经发送验证码到你的手机</string>
    <string name="regIngPhoneNumber">1511232131</string>
    <string name="regIngVCode">请填写收到的验证码</string>
    <string name="regIngBtnReg">确定</string>
    <string name="regIngRepeatVCode">重写发送验证码</string>
    <string name="regTipAgree">已同意用户协议</string>
    <string name="regBtnReg">注册</string>
    <string name="regDownTitle">您的账号注册成功</string>
    <string name="regDownBtnReg">完成</string>
    <string name="mainTitle">首页</string>
    <string name="mainAssn">社团活动</string>
    <string name="mainSchool">本校活动</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="updated_at">上次更新于%1$1s前</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="not_updated_yet">暂时未更新过</string>
    <string name="time_error">时间有问题</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="mainAssLook">查看</string>
    <string name="mine3">关注0</string>
    <string name="mine4">粉丝0</string>
    <string name="mineBaseInfo">基本信息</string>
    <string name="mineLevel">用户等级</string>
    <string name="mineSign">个性签名</string>
    <string name="mineSetting">设置</string>
    <string name="mineMyTopics">我的帖子</string>
    <string name="mineLogout">退出登录</string>
    <string name="mineChangeHeadCancel">取消</string>
    <string name="mineChangeHeadTakePhoto">拍照上传</string>
    <string name="mineChangeHeadImages">手机相册</string>
    <string name="mineConcerns">我的关注</string>
    <string name="mineInfoName">真实姓名</string>
    <string name="mineInfoSex">性别</string>
    <string name="mineInfoSchool">学校</string>
    <string name="mineInfoMajor">专业</string>
    <string name="mineInfoNameSave">保存</string>
    <string name="assnTitle1">操场</string>
    <string name="exitAssns">退出社团</string>
    <string name="unconcerned">取消关注</string>
	<string name="abc">abc</string>
	<string name="bookList">bookList</string>

</resources>
