<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mine_change_head_lilay_bottom"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rect_gray"
        android:contentDescription="@null" >

        <TextView
            android:id="@+id/mine_change_head_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mineChangeHeadCancel"
            android:textColor="@color/blue_head"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/mine_change_head_lilay_bottom"
        android:layout_marginBottom="20sp"
        android:background="@drawable/rect_gray"
        android:contentDescription="@null"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mine_change_head_takePhoto"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:gravity="center"
            android:text="@string/mineChangeHeadTakePhoto"
            android:textColor="@color/blue_head"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@drawable/rect_gray" />

        <TextView
            android:id="@+id/mine_change_head_takeImage"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:gravity="center"
            android:text="@string/mineChangeHeadImages"
            android:textColor="@color/blue_head"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>