<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mine_Relay_allTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/mine_Relay_Top"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#ff0000"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="20sp" >

        <ImageView
            android:id="@+id/mine_head"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:contentDescription="@null"
            android:src="@drawable/mine_head" />

        <RelativeLayout
            android:id="@+id/mine_NameSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mine_head" >

            <TextView
                android:id="@+id/mine_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:singleLine="true"
                android:text="abc"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/mine_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/mine_userName"
                android:contentDescription="@null"
                android:src="@drawable/mine_sex" />
        </RelativeLayout>

        <TextView
            android:id="@+id/mine_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mine_NameSex"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_toRightOf="@id/mine_head"
            android:text="abccc"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mine_head"
            android:layout_centerInParent="true"
            android:layout_marginTop="20sp"
            android:orientation="horizontal"
            android:paddingBottom="10sp" >

            <Button
                android:id="@+id/mine_concerns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:background="@null"
                android:drawableLeft="@drawable/mine_concern"
                android:gravity="right"
                android:text="@string/mine3"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/mine_fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:background="@null"
                android:drawableLeft="@drawable/mine_fans"
                android:gravity="left"
                android:text="@string/mine4"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_Relay_Bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mine_Relay_Top"
        android:background="#E5E7E6"
        android:paddingTop="10sp" >

        <View
            android:id="@+id/mine_line1"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/mine_Relay_first"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_line1"
            android:background="@android:color/white"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <ImageView
                android:id="@+id/mine_img_baseInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_base_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@id/mine_img_baseInfo"
                android:text="@string/mineBaseInfo"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_Relay_second"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_Relay_first"
            android:background="@android:color/white"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <ImageView
                android:id="@+id/mine_img_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_sign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@id/mine_img_sign"
                android:text="@string/mineSign"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <View
            android:id="@+id/mine_line3"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@id/mine_Relay_second"
            android:layout_marginTop="20sp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/mine_Relay_third"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_line3"
            android:background="@android:color/white"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <ImageView
                android:id="@+id/mine_img_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_level" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@id/mine_img_level"
                android:text="@string/mineLevel"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/mine_arrow_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_arrow" />

            <Button
                android:id="@+id/btn_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10sp"
                android:layout_toLeftOf="@id/mine_arrow_level"
                android:background="@drawable/lv5"
                android:contentDescription="@null"
                android:gravity="right"
                android:paddingRight="4sp"
                android:text="5"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_Relay_four"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_Relay_third"
            android:background="@android:color/white"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <ImageView
                android:id="@+id/mine_img_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@id/mine_img_setting"
                android:text="@string/mineSetting"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_Relay_five"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_Relay_four"
            android:background="@android:color/white"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <ImageView
                android:id="@+id/mine_img_myTopics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15sp"
                android:layout_toRightOf="@id/mine_img_myTopics"
                android:text="@string/mineMyTopics"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:src="@drawable/mine_arrow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <View
            android:id="@+id/mine_line4"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@id/mine_Relay_five"
            android:layout_marginTop="20sp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/mine_Relay_six"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/mine_line4"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingLeft="15sp"
            android:paddingRight="15sp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/mineLogout"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

</RelativeLayout>